Fix: Position action menu overlapping navbar.

--- a/less/essential/core.less
+++ b/less/essential/core.less
@@ -46,6 +46,7 @@ a:focus {
     white-space: nowrap;
     .menu {
         box-shadow: none;
+        z-index: 2; // Was 1000, see #essentialnavbar in navigation.less.
         .iconsmall,
         .smallicon {
             margin: 4px;
